--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=angularspringboot
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
